# pyinstaller-sample

./: pyproject.toml
src/: main.py
